<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mymechinelearning.ui.about.AboutFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_dataset"
        android:name="com.example.mymechinelearning.ui.dataset.DatasetFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_dataset" />

    <fragment
        android:id="@+id/nav_fitur"
        android:name="com.example.mymechinelearning.ui.fitur.PiturFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_pitur" />
    <fragment
        android:id="@+id/nav_model"
        android:name="com.example.mymechinelearning.ui.model.ModelFragment"
        android:label="@string/menu_model"
        tools:layout="@layout/fragment_model" />
    <activity
        android:id="@+id/nav_simulasi"
        android:name="com.example.mymechinelearning.ui.simulasi.SimulasiActivity"
        android:label="@string/sim_model"
        tools:layout="@layout/fragment_simulasi" />
    <activity
        android:id="@+id/nav_welcome"
        android:name="com.example.mymechinelearning.WelcomeActivity"
        android:label="@string/nav_welcome"
        tools:layout="@layout/activity_welcome"/>
</navigation>