<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutFragment">

    <FrameLayout
        android:id="@+id/flinti"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@+id/flsumber"
            app:layout_constraintTop_toTopOf="@+id/flsumber">

            <TextView
                android:id="@+id/hai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="Haii!!"
                android:textSize="42sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/selamat_dattang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selamat_datang"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/hai"
                app:layout_constraintTop_toBottomOf="@+id/hai" />

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/app_name"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toEndOf="@+id/selamat_dattang"
                app:layout_constraintTop_toTopOf="@+id/selamat_dattang" />

            <FrameLayout
                android:id="@+id/flapaini"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/selamat_dattang"
                app:layout_constraintTop_toBottomOf="@+id/selamat_dattang">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tujuan"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:text="@string/tv_deskripsi2"
                        android:textAlignment="viewStart"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/flsumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="@id/flapaini"
                app:layout_constraintStart_toStartOf="@+id/flapaini"
                app:layout_constraintTop_toBottomOf="@+id/flapaini">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/sumber"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:text="@string/sumber"
                        android:textAlignment="viewStart"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/linknya"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:autoLink="web"
                        android:justificationMode="inter_word"
                        android:text="@string/linknya"
                        android:textAlignment="viewStart"
                        android:textStyle="bold|italic"
                        app:layout_constraintStart_toStartOf="@id/sumber"
                        app:layout_constraintTop_toBottomOf="@+id/sumber" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/flcara"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="@id/flsumber"
                app:layout_constraintStart_toStartOf="@+id/flsumber"
                app:layout_constraintTop_toBottomOf="@+id/flsumber">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/caranya"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:text="@string/caranya"
                        android:textAlignment="viewStart"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>